--- a/mqtt-frontend/index.html
+++ b/mqtt-frontend/index.html
@@ -97,29 +97,39 @@
     <header class="banner">
         <h1>Charger Mockup</h1>
     </header>
+    <hr>
       
       <!-- Rounded switch -->
+    
+    <p>
+    <b> Charger 1 </b>
     <label class="switch">
-        <input type="checkbox" id = "esp1" onclick="esp1()">
+        <input type="checkbox" id = "esp1" onchange="esp1()" >
         <span class="slider round"></span>
     </label>
     <p1>OFF</p1><p1 style="display:none;">ON</p1>
+    </p>
 
+    <p>
+    <b> Charger 2 </b>
     <label class="switch">
-        <input type="checkbox" id = "esp2" onclick="esp2()">
+        <input type="checkbox" id = "esp2" onchange="esp2()" >
         <span class="slider round"></span>
     </label>
     <p2>OFF</p2><p2 style="display:none;">ON</p2>
+    </p>
 
+    <p>
+    <b> Charger 3 </b>
     <label class="switch">
-        <input type="checkbox" id = "esp3" onclick="esp2()">
+        <input type="checkbox" id = "esp3" onchange="esp2()" >
         <span class="slider round"></span>
     </label>
     <p3>OFF</p3><p3 style="display:none;">ON</p3>
+    </p>
+    <hr>
 
-    <!--button esp/1-->
-    <br>
-    <button>master</button>
+    <img src="image001.png" alt="Image" width="400" height="50">
 
     <script src="function.js"></script>
 
