--- a/mqtt-frontend/index.html
+++ b/mqtt-frontend/index.html
@@ -103,6 +103,7 @@
     
     <p>
     <b> Charger 1 </b>
+    <input type="text" id="carno1" size="10">
     <label class="switch">
         <input type="checkbox" id = "esp1" onchange="esp1()" >
         <span class="slider round"></span>
@@ -112,6 +113,7 @@
 
     <p>
     <b> Charger 2 </b>
+    <input type="text" id="carno2" size="10">
     <label class="switch">
         <input type="checkbox" id = "esp2" onchange="esp2()" >
         <span class="slider round"></span>
@@ -121,6 +123,7 @@
 
     <p>
     <b> Charger 3 </b>
+    <input type="text" id="carno3" size="10">
     <label class="switch">
         <input type="checkbox" id = "esp3" onchange="esp3()" >
         <span class="slider round"></span>
