--- a/mqtt-frontend/index.html
+++ b/mqtt-frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Test Web Server</title>
+    <link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-sclae=1.0">
@@ -109,6 +110,7 @@
         <span class="slider round"></span>
     </label>
     <p1>OFF</p1><p1 style="display:none;">ON</p1>
+    <p4 style="display:none;" id="discount1">**DISCOUNT**</p4>
     </p>
 
     <p>
@@ -119,6 +121,7 @@
         <span class="slider round"></span>
     </label>
     <p2>OFF</p2><p2 style="display:none;">ON</p2>
+    <p5 style="display:none;" id="discount2">**DISCOUNT**</p5>
     </p>
 
     <p>
@@ -129,6 +132,7 @@
         <span class="slider round"></span>
     </label>
     <p3>OFF</p3><p3 style="display:none;">ON</p3>
+    <p6 style="display:none;" id="discount3">**DISCOUNT**</p6>
     </p>
     <hr>
 
